# simulator

./: Makefile  README.md  docker-compose.yml
.github/workflows/: backend-format-check.yml  ci.yml  run-pytest.yml
backend/: .dockerignore  .env.example  .gitignore  AUTHENTICATION.md  CRUD_GUIDE.md  Dockerfile  LOGGING.md  README.md  alembic.ini  dependencies.py  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: admin.py  auth.py  leaderboard.py  trading.py  users.py
backend/app/core/: config.py  deps.py  logging.py  security.py
backend/app/db/: database.py
backend/app/db/crud/: __init__.py  base.py  user.py
backend/app/models/: __init__.py  bot.py  bot_position.py  instrument.py  instrument_factor_exposure.py  instrument_sector_exposure.py  macro_factor.py  news_event.py  news_event_factor.py  sector.py  user.py
backend/app/schemas/: __init__.py  token.py  user.py
backend/app/services/: auth.py  gbm.py  leaderboard.py  liquidity_bot.py  news.py  order_book.py  order_processor.py  user.py
backend/app/websocket/: __init__.py  market.py  price_engine.py
backend/migrations/: README  env.py
backend/migrations/versions/: 6b9c6a7a2a2f_initial_migration_with_all_models.py  967eaa697b4e_add_users_table.py  eb550a564157_init.py
backend/scripts/: create_migration.py  create_user.py  init_db.py
backend/tests/: test_gbm.py  test_main.py  test_order_book.py
frontend/: .prettierrc  eslint.config.js  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Header.tsx  LatencyPill.tsx  PriceTicker.tsx  chart.tsx
frontend/src/contexts/: AuthContext.tsx  WebSocketContext.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: index.tsx  login.tsx  profile.tsx  trades.tsx
